# code-agent-manager

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README_zh.md  coverage.xml  go.mod  go.sum  install.sh  providers.json.example  pyproject.toml  pytest.ini  requirements.txt  setup.py  wails.json
code_assistant_manager/: config.py  copilot_models.py  endpoints.py  env_loader.py  exceptions.py  litellm_models.py  plugin_repos.json  repo_loader.py  skill_repos.json  tools.yaml  v1_models.py
docs/: BLACKBOX_INTEGRATION.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CODE_QUALITY.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  DESIGN_PATTERNS_README.md  DEVELOPER_GUIDE.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  JSON_CONFIG_REFACTORING.md  LAZY_LOADING_REPORT.md  MCP_RECONSTRUCTION_COMPLETE.md  PERFORMANCE_IMPROVEMENTS.md  PROMPTS_AND_SKILLS.md  PYTHON_CONVERSION_COMPLETE.md  PYTHON_INDEX.md  PYTHON_PACKAGE.md  QUICK_REFERENCE.md  QUICK_START_PATTERNS.md  README_zh.md  TEST_FIXES_SUMMARY.md  TEST_SUITE_SUMMARY.md  TOOLS_IMPLEMENTATION_COMPLETE.md  UPGRADE_FUNCTIONALITY.md  multi-source-repos.md  security-report.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: check_file_sizes.py  migrate_mcpm_schemas.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: test_agent_skill_integration.py  test_benchmark.py  test_claude_agent_handler.py  (+29 more)
(+695 files in other folders)
